# hmanlab

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  install.sh
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  release.yml  scorecard.yml
docs/: multiagents.md  telegram.md  testing-0.2.1.md
docs/archive/: 2026-05-15-refactor-plan.md
npm/@hmanlab/darwin-arm64/: README.md  package.json
npm/@hmanlab/darwin-x64/: README.md  package.json
npm/@hmanlab/linux-arm64/: README.md  package.json
npm/@hmanlab/linux-x64/: LICENSE  README.md  package.json
npm/@hmanlab/win32-x64/: README.md  package.json
npm/hmanlab/: README.md  package.json
npm/hmanlab/test/: smoke.js
scripts/: npm-local.sh  release.sh
src/: agent.rs  api.rs  compact.rs  config.rs  main.rs  memory.rs  ollama.rs  openai_compat.rs  telegram.rs  trust.rs  update_check.rs
src/app/: backend.rs  event.rs  inline.rs  mod.rs  state.rs  stream.rs  stream_msg.rs  viewer.rs  workspace.rs
src/app/commands/: agent_templates.rs  agents.rs  attach.rs  disconnect.rs  help.rs  mod.rs  model.rs  session.rs  settings.rs  telegram.rs
src/app/input/: chat.rs  modals.rs  mouse.rs
src/app/stream/: chat.rs  mod.rs  (+3 more)
src/tools/: definitions.rs  diff.rs  git.rs  lines.rs  matchers.rs  memory_tools.rs  mod.rs  patch.rs  read.rs  shell.rs  workspace.rs  write.rs
src/ui/: chat.rs  markdown.rs  mod.rs  popups.rs  sidebar.rs  theme.rs  viewer.rs  wrap_cache.rs
(+19 files in other folders)
