[package]
name = "hmanlab"
version = "0.2.1"
edition = "2021"
rust-version = "1.74"
description = "Terminal UI for chatting with local Ollama and BYOK LLM providers, with agentic tool use and persistent memory."
license = "MIT"
repository = "https://github.com/hmanlab/hmanlab"
homepage = "https://github.com/hmanlab/hmanlab"
documentation = "https://github.com/hmanlab/hmanlab#readme"
readme = "README.md"
authors = ["rekabytes <hello@rekabytes.com>"]
keywords = ["tui", "ollama", "llm", "ratatui", "agent"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
ratatui = { version = "0.29", features = ["unstable-rendered-line-info"] }
crossterm = { version = "0.28", features = ["event-stream"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time", "io-util", "process", "fs"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures = "0.3"
anyhow = "1"
clap = { version = "4", features = ["derive", "env"] }
tui-textarea = "0.7"
glob = "0.3"
base64 = "0.22"
similar = "2"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
